<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/b2"
        android:layout_width="82dp"
        android:layout_height="67dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/two"
        app:layout_constraintStart_toEndOf="@+id/b1"
        app:layout_constraintTop_toBottomOf="@+id/b5" />

    <Button
        android:id="@+id/bce"
        android:layout_width="82dp"
        android:layout_height="67dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/ce"
        app:layout_constraintBottom_toTopOf="@+id/beq"
        app:layout_constraintStart_toEndOf="@+id/b0"
        app:layout_constraintTop_toBottomOf="@+id/b2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/b3"
        android:layout_width="82dp"
        android:layout_height="67dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/three"
        app:layout_constraintStart_toEndOf="@+id/b2"
        app:layout_constraintTop_toBottomOf="@+id/b6" />

    <Button
        android:id="@+id/bdot"
        android:layout_width="82dp"
        android:layout_height="67dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/dot"
        app:layout_constraintBottom_toTopOf="@+id/beq"
        app:layout_constraintStart_toEndOf="@+id/bce"
        app:layout_constraintTop_toBottomOf="@+id/b3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bmul"
        android:layout_width="82dp"
        android:layout_height="67dp"
        android:layout_marginTop="24dp"
        android:text="@string/mul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toEndOf="@+id/b6"
        app:layout_constraintTop_toBottomOf="@+id/bdiv" />

    <Button
        android:id="@+id/bsub"
        android:layout_width="82dp"
        android:layout_height="67dp"
        android:layout_marginTop="20dp"
        android:text="@string/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toEndOf="@+id/b3"
        app:layout_constraintTop_toBottomOf="@+id/bmul" />

    <Button
        android:id="@+id/badd"
        android:layout_width="82dp"
        android:layout_height="67dp"
        android:layout_marginTop="16dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@+id/beq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toEndOf="@+id/bdot"
        app:layout_constraintTop_toBottomOf="@+id/bsub"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bdiv"
        android:layout_width="82dp"
        android:layout_height="67dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/div"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/b9"
        app:layout_constraintTop_toBottomOf="@+id/sc1" />

    <Button
        android:id="@+id/b6"
        android:layout_width="82dp"
        android:layout_height="67dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:text="@string/six"
        app:layout_constraintStart_toEndOf="@+id/b5"
        app:layout_constraintTop_toBottomOf="@+id/b9" />

    <Button
        android:id="@+id/b9"
        android:layout_width="82dp"
        android:layout_height="67dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="52dp"
        android:text="@string/nine"
        app:layout_constraintStart_toEndOf="@+id/b8"
        app:layout_constraintTop_toBottomOf="@+id/sc1" />

    <Button
        android:id="@+id/b7"
        android:layout_width="82dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sc1" />

    <Button
        android:id="@+id/b4"
        android:layout_width="82dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b7" />

    <Button
        android:id="@+id/b1"
        android:layout_width="82dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b4" />

    <Button
        android:id="@+id/b0"
        android:layout_width="82dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toTopOf="@+id/beq"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/b8"
        android:layout_width="82dp"
        android:layout_height="67dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="52dp"
        android:text="@string/eight"
        app:layout_constraintStart_toEndOf="@+id/b7"
        app:layout_constraintTop_toBottomOf="@+id/sc1" />

    <Button
        android:id="@+id/b5"
        android:layout_width="82dp"
        android:layout_height="67dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/five"
        app:layout_constraintStart_toEndOf="@+id/b4"
        app:layout_constraintTop_toBottomOf="@+id/b8" />

    <Button
        android:id="@+id/beq"
        android:layout_width="380dp"
        android:layout_height="65dp"
        android:layout_marginBottom="40dp"
        android:text="@string/eq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sc1"
        android:layout_width="374dp"
        android:layout_height="77dp"
        android:layout_marginTop="12dp"
        android:height="100dp"
        android:orientation="horizontal"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sc2" />

    <TextView
        android:id="@+id/sc2"
        android:layout_width="374dp"
        android:layout_height="77dp"
        android:layout_marginTop="36dp"
        android:height="100dp"
        android:orientation="horizontal"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>